--- a/Category page/media scr.css
+++ b/Category page/media scr.css
@@ -32,6 +32,9 @@
     hr:not([size]){
         height: 2.5px;
     }
+    .lists{
+        font-size: 0.6rem;
+    }
     .page-title{
         border-radius: 10px;
         font-size: 1rem;
