--- a/home page/style.css
+++ b/home page/style.css
@@ -464,16 +464,30 @@ h2{
 .card-cont{
     border-radius: 15px;
     filter: drop-shadow(8px 8px 10px #000);
-    margin: 2%;
     border: 0;
     transform: scale(1);
     opacity: 0.8;
+    width: fit-content;
     background-color: #264653;
     transition: transform 500ms ease;
 }
-.card-cont:hover{
+
+.videos a{
+    margin: 2% 1%;
+    width: max-content;
+    height: fit-content;
+    display: inline-block;
+    transform: scale(1);
+    transition: transform 500ms ease;
+}
+
+.videos a:hover{
     transform: scale(1.1);
     opacity: 1;
+}
+
+.card-cont:hover a{
+    transform: scale(1.1);
 }
 
 .card-cont .image{
